En attendant  la derniére version

--- a/Vote/css/coda-slider.css
+++ b/Vote/css/coda-slider.css
@@ -31,7 +31,7 @@
 	width: 180px; 
 	height: 23px; 
 	margin: 0 auto; 
-	background: url(../images/tooplate_logo.png) top center no-repeat; 
+	background: url(../images/vote.jpg) top center no-repeat; 
 	text-indent: -10000px; 
 }
 
